fix image stretch

--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -38,9 +38,8 @@ header.site-header {
   .parallax-wrapper {
     overflow: hidden;
     position: absolute;
-    width: 100%;
+    height: 100%;
     width: auto;        /* scale width to keep ratio */
-    margin: 0 auto;     /* center it horizontally */
     //height: 100vh;
     //max-height: 1080px;
     top: 0;
